<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board"
    android:orientation="vertical"
    tools:context=".LevelSelectionActivity">


    <ImageView
        android:id="@+id/title"
        android:layout_width="354dp"
        android:layout_height="122dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/title"
        android:gravity="center" />

    <Button
        android:id="@+id/easyButton"
        style="@style/CommonButton"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        android:onClick="clicked"
        android:text="@string/difficulty_easy" />

    <Button
        android:id="@+id/mediumButton"
        style="@style/CommonButton"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        android:onClick="clicked"
        android:text="@string/difficulty_medium" />

    <Button
        android:id="@+id/hardButton"
        style="@style/CommonButton"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        android:onClick="clicked"
        android:text="@string/difficulty_hard" />

    <Button
        android:id="@+id/extremeButton"
        style="@style/CommonButton"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        android:onClick="clicked"
        android:text="@string/difficulty_extreme" />

    <Button
        android:id="@+id/customButton"
        style="@style/CommonButton"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:onClick="clicked"
        android:text="@string/difficulty_custom" />


</LinearLayout>