<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board"
    android:orientation="vertical"
    tools:context=".CustomGameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:text="@string/title_custom"
            android:textSize="25sp" />

        <TextView
            style="@style/CommonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="@string/custom_subtitle"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/boardSize"
            style="@style/CommonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/custom_board"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mineAmount"
            style="@style/CommonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/custom_mines"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <TextView
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="@string/custom_high_score_info"
            android:textSize="13sp" />

        <Button
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:onClick="clicked"
            android:padding="25dp"
            android:text="@string/custom_button_start" />
    </LinearLayout>


</LinearLayout>